@@ -1,3 +1,8 @@
+10/28/2006 - jdiamond
+=====================
+
+ * Fixed a date-formatting problem that was specific to Windows
+
 10/20/2006 - jdiamond
 =====================
 
